# Analizador_multiple

./: README.md
compilador/: CMakeLists.txt
compilador/examples/: ejemplo1.txt  usuario.schema
compilador/src/: main.cpp
compilador/src/ast/: ASTNode.h
compilador/src/codegen/: AjvGenerator.cpp  AjvGenerator.h  JSONGenerator.cpp  JSONGenerator.h
compilador/src/common/: Token.h  TokenType.h
compilador/src/lexer/: Lexer.cpp  Lexer.h
compilador/src/parser/: LRParser.cpp  LRParser.h  LRTokenMap.h
